--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img class="line-4-C61RwL" src="img/line-15@1x.png" />
         <img class="image-1-C61RwL" src="img/image-1@1x.png" />
         <h1 class="hi-im-dan-C61RwL">Hi, I’m Dan!</h1>
-        <img class="path-1-C61RwL" src="img/path-1@1x.png" />
+        <img class="path-1-C61RwL blink-image" src="img/path-1@1x.png" />
         <div class="i-am-a-software-el-design-stand-C61RwL roboto-normal-white-20px">
           I am a&nbsp;&nbsp;Software Engineer based in Vancouver, British Columbia, Canada. With 3 years of experience,
           <br />I have become a high performing developer with the ability to learn new skills quickly, <br />provide
