--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://animaapp.s3.amazonaws.com/launchpad-static/launchpad.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
+    <meta name="author"/>
   </head>
   <body style="margin: 0; background: #ffffff">
     <input type="hidden" id="anPageName" name="page" value="web-1920-1" />
