--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         >
         <img class="line-11-C61RwL" src="img/line-10@1x.png" />
         <div class="distributed-con-s-visualisation-VMr6Om roboto-normal-white-20px">
-          Distributed Consensus Visualisation
+          Wireless Sensor System for Remote Air Quality Analysis
         </div>
         <div class="increased-air-q-ther-conditions-C61RwL roboto-normal-white-17px">
           Increased air quality analysis in northern British Columbia by developing a low-cost wireless <br />sensor
