--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           to teach over 20 second and <br />fourth year students at the University of Northern British Columbia
           understand <br />Distributed Consensus.
         </div>
-        <a href="https://github.com/Daniel-OReilly" onclick="window.event.stopPropagation()" target="_blank"
+        <a href="https://github.com/Daniel-OReilly/Distributed-Consensus-Visualization" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-C61RwL roboto-normal-regent-gray-20px">Read More →</div></a
         >
         <img class="line-10-C61RwL" src="img/line-10@1x.png" />
@@ -119,7 +119,7 @@
           fine-tuned for specific news areas. This model outperformed all other student <br />models in an upper level
           A.I course at the University of Northern British Columbia.
         </div>
-        <a href="https://github.com/Daniel-OReilly" onclick="window.event.stopPropagation()" target="_blank"
+        <a href="https://github.com/Daniel-OReilly/Fake-News-Detection" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-VMr6Om roboto-normal-regent-gray-20px">Read More →</div></a
         >
         <img class="line-11-C61RwL" src="img/line-10@1x.png" />
@@ -142,7 +142,7 @@
           of the collected stories, we are able to predict the lasting effect and <br />notability of news stories
           through the concurrent appearance of similar content in <br />neighbouring communities.
         </div>
-        <a href="https://github.com/Daniel-OReilly" onclick="window.event.stopPropagation()" target="_blank"
+        <a href="https://github.com/Daniel-OReilly/Tracking-the-Spread-of-News" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-QxM5SU roboto-normal-regent-gray-20px">Read More →</div></a
         >
         <img class="line-14-C61RwL" src="img/line-14@1x.png" />
