--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img class="path-1-C61RwL blink-image" src="img/path-1@1x.png" />
         <div class="i-am-a-software-el-design-stand-C61RwL roboto-normal-white-20px">
           I am a&nbsp;&nbsp;Software Engineer based in Vancouver, British Columbia, Canada. With 3 years of experience,
-          <br />I have become a high performing developer with the ability to learn new skills quickly, <br />provide
+          <br />I have become a high performing developer with the ability to quickly learn new skills, <br />provide
           meaningful feedback, and implement high level design standards.
         </div>
         <div class="x-C61RwL roboto-normal-white-20px"><br /></div>
