--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           easily visualized through Message Sequence Diagrams (MSDs). <br />This allows the user to gain a greater
           understanding of the algorithm, as well as faster <br />debugging times. This framework is planned to be used
           to teach over 20 second and <br />fourth year students at the University of Northern British Columbia
-          understand <br />Distributed Consensus.
+          to better understand <br />Distributed Consensus.
         </div>
         <a href="https://github.com/Daniel-OReilly/Distributed-Consensus-Visualization" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-C61RwL roboto-normal-regent-gray-20px">Read More →</div></a
