--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
         </div>
         <div class="through-the-cre-as-faster-debu-C61RwL roboto-normal-white-17px">
           Through the creation of a framework in Python and Java, Distributed Consensus <br />Algorithms can now be
-          easily visualized through Message Sequence Diagrams (MSDs). <br />This allows the user to gain a greater
-          understanding of the algorithm, as well as faster <br />debugging times. This framework is planned to be used
+          easily visualized via Message Sequence Diagrams (MSDs). <br />This allows the user to gain a greater
+          understanding of how communication is occurring in the system <br />, making it faster and easier to debug events. This framework is planned to be used
           to teach over 20 second and <br />fourth year students at the University of Northern British Columbia
           to better understand <br />Distributed Consensus.
+
+
         </div>
         <a href="https://github.com/Daniel-OReilly/Distributed-Consensus-Visualization" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-C61RwL roboto-normal-regent-gray-20px">Read More →</div></a
