Distributed Paragraph Fix

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="achieved-997-ac-orthern-british-C61RwL roboto-normal-white-17px">
           Achieved 99.7% accuracy on the ISOT Fake News Datasets by creating a classification model <br />that can be
           fine-tuned for specific news areas. This model outperformed all other student <br />models in an upper level
-          A.I course at the University of Northern British Columbia.
+          AI course at the University of Northern British Columbia.
         </div>
         <a href="https://github.com/Daniel-OReilly/Fake-News-Detection" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-VMr6Om roboto-normal-regent-gray-20px">Read More →</div></a
