Fixed Tracking of News paragraph

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="tracking-the-spread-of-news-C61RwL roboto-normal-white-20px">Tracking the Spread of News</div>
         <div class="developed-a-sys-similar-conten-C61RwL roboto-normal-white-17px">
           Developed a system to scrape all news stories within a designated geographic location. <br />Through analysis
-          of the collected stories, we are able to predict the lasting effect and <br />notability of news stories
+          of the collected stories, I was able to predict the lasting effect and <br />notability of news stories
           through the concurrent appearance of similar content in <br />neighbouring communities.
         </div>
         <a href="https://github.com/Daniel-OReilly/Tracking-the-Spread-of-News" onclick="window.event.stopPropagation()" target="_blank"
