--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="developed-a-sys-similar-conten-C61RwL roboto-normal-white-17px">
           Developed a system to scrape all news stories within a designated geographic location. <br />Through analysis
           of the collected stories, I was able to predict the lasting effect and <br />notability of news stories
-          through the concurrent appearance of similar content in <br />neighbouring communities.
+          by observing the concurrent appearance of similar content in <br />neighbouring communities.
         </div>
         <a href="https://github.com/Daniel-OReilly/Tracking-the-Spread-of-News" onclick="window.event.stopPropagation()" target="_blank"
           ><div class="read-more-QxM5SU roboto-normal-regent-gray-20px">Read More →</div></a
