Fixed Tracking Spread of News II

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="increased-air-q-ther-conditions-C61RwL roboto-normal-white-17px">
           Increased air quality analysis in northern British Columbia by developing a low-cost wireless <br />sensor
-          system, durable enough to monitor air quality in areas previously inaccessible <br />due to harsh weather
+          system, durable enough to monitor air quality in areas that were previously inaccessible <br />due to harsh weather
           conditions.
         </div>
         <a href="https://github.com/Daniel-OReilly" onclick="window.event.stopPropagation()" target="_blank"
