Fixed Tracking Spread of News II

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         <div class="through-the-cre-as-faster-debu-C61RwL roboto-normal-white-17px">
           Through the creation of a framework in Python and Java, Distributed Consensus <br />Algorithms can now be
           easily visualized via Message Sequence Diagrams (MSDs). <br />This allows the user to gain a greater
-          understanding of how communication is occurring in the system <br />, making it faster and easier to debug events. This framework is planned to be used
+          understanding of how communication is occurring in the system, <br /> making it faster and easier to debug events. This framework is planned to be used
           to teach over 20 second and <br />fourth year students at the University of Northern British Columbia
-          to better understand <br />Distributed Consensus.
+          to better understand Distributed Consensus.
 
 
         </div>
